--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-navigation/native": "^6.1.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
