--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
@@ -27,7 +27,7 @@
     "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.14",
     "react-native-event-listeners": "^1.0.7",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
